@@ -1,5 +1,7 @@
 package souther.compiler;
 
+import souther.compiler.source.SourceId;
+
 import souther.compiler.generated.MemoryClassLoader;
 import souther.compiler.meta.ModulePath;
 import souther.compiler.observe.Disposition;
@@ -76,7 +78,7 @@ class AnEvaluationRunsTheClassesThisCompileGeneratedTest {
         assertNull(compilation.failure(),
                 "the model is correct, so nothing is wrong with it");
 
-        String sourceId = compilation.exampleSourcesOf("example.stale").get(0);
+        SourceId sourceId = compilation.exampleSourcesOf("example.stale").getFirst();
         List<RowOutcome> rows = compilation.db()
                 .ask(new Output.Examples("example.stale", sourceId, Output.CoverageMode.NONE))
                 .value().rows();
